# rust_fun

api/: Cargo.toml
api/app/: brunch-config.js  package-lock.json  package.json
api/app/elm/: main.elm
api/app/js/: app.js
api/public/js/: 404.html  app.js  app.js.map  index.html
api/src/: db.rs  main.rs  models.rs  routes.rs  static_files.rs
balloon/: Cargo.toml
balloon/src/: main.rs
microservice/chapter2_logging/: .env  Cargo.toml
microservice/chapter2_logging/src/: main.rs
microservice/hyper-microservice/: Cargo.toml
microservice/hyper-microservice/src/: main.rs
microservice/serde_prac/: Cargo.toml
microservice/serde_prac/src/: color.rs  main.rs
prac/crash/: Cargo.toml
prac/crash/src/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  lifetimes.rs  loops.rs  main.rs  pointers.rs  print.rs  string.rs  structs.rs  tuples.rs  types.rs  vars.rs  vectors.rs
