[package]
name = "api"
version = "0.1.0"
authors = ["Simon Gudim <simongudim@yahoo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

rocket = "0.4.0-dev"
rocket_codegen = "0.4.5"


[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]

[patch.crates-io.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"

[patch.crates-io.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"