[package]
name = "chapter2_logging"
version = "0.1.0"
authors = ["simGudim <simongudim@yahoo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"
hyper = "0.12"
futures = "0.1"
rand="0.5"
log="0.4"
pretty_env_logger = "0.2"
dotenv = "0.13"
clap = "2.32"
serde="1.0"
serde_derive="1.0"
toml="0.4"